--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
@@ -205,7 +205,7 @@
                     </ul>
                 </div>
 
-                <p class="text-center">Copyrights © 2017 <a href="http://camcanhbuoidien.com">Cam Canh Buoi Dien</a>. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
+                <p class="text-center">Copyrights © 2017 <a href="http://camcanhbuoidien.com">@commonInfo.Name</a>. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
             </div>
         </div>
     </footer>
