--- a/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
+++ b/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
@@ -98,7 +98,7 @@
 	background: #f96d10;
 }
 .option5 .product-list li .product-price {
-	color: #f96d10;
+	color: #083b54;
 }
 
 
@@ -134,7 +134,7 @@
     color: #a4e0ad;
 }
 .option5 a:hover{
-	color: #9ee6a8;
+	color: #5f93b9;
 }
 .option5 .top-header .dropdown-menu{
 	border-top: 2px solid #f96d10;
