--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/product/_productDetail.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/product/_productDetail.cshtml
@@ -45,7 +45,7 @@
                 <div class="product-price-group">
                     @if (item.Price>0)
                     {
-                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                        <span class="price">@Anpero.StringHelpper.ConvertToVndMoney(item.Price) đ</span>
                     }
                 </div>
                 <div class="info-orther">
