--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AnperoFrontend.WebService;
+
 @{
     AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();
     if (ViewData["commonInfo"] != null)
@@ -13,38 +14,8 @@
     <meta name="keywords" content="@commonInfo.Desc" />
 }
 <div class="content">
-    <div id="thm-mart-slideshow" class="thm-mart-slideshow">
-        <div class="container">
-            <div id='thm_slider_wrapper' class='thm_slider_wrapper fullwidthbanner-container'>
-                <div id='thm-rev-slider' class='rev_slider fullwidthabanner'>
-                    <ul>
-                        <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='/assets/images/slider-image.png'>
-                            <img src='/assets/images/slider-image.png' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="slider-image1" />
-                            <div class="info">
-                                <div class='tp-caption ExtraLargeTitle sft  tp-resizeme ' data-x='0' data-y='210' data-endspeed='500' data-speed='500' data-start='1100' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:2;max-width:auto;max-height:auto;white-space:nowrap;'><span>Get 50% off</span></div>
-                                <div class='tp-caption LargeTitle sfl  tp-resizeme ' data-x='0' data-y='300' data-endspeed='500' data-speed='500' data-start='1300' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:3;max-width:auto;max-height:auto;white-space:nowrap;'><span>Simply delicious</span></div>
-                                <div class='tp-caption sfb  tp-resizeme ' data-x='0' data-y='550' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4;max-width:auto;max-height:auto;white-space:nowrap;'><a href='#' class="buy-btn">Shop Now</a></div>
-                                <div class='tp-caption Title sft  tp-resizeme ' data-x='0' data-y='420' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Power2.easeInOut' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4;max-width:auto;max-height:auto;white-space:nowrap;'>Little things make a big difference</div>
-                            </div>
-                        </li>
-                        <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='/assets/images/slider-image.png'>
-                            <img src='/assets/images/slider-image.png' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="slider-image2" />
-                            <div class="info">
-                                <div class='tp-caption ExtraLargeTitle sft  tp-resizeme ' data-x='0' data-y='210' data-endspeed='500' data-speed='500' data-start='1100' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:2;max-width:auto;max-height:auto;white-space:nowrap;'><span>Fresh Look</span></div>
-                                <div class='tp-caption LargeTitle sfl  tp-resizeme ' data-x='0' data-y='300' data-endspeed='500' data-speed='500' data-start='1300' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:3;max-width:auto;max-height:auto;white-space:nowrap;'><span>100% Refreshing</span></div>
-                                <div class='tp-caption sfb  tp-resizeme ' data-x='0' data-y='550' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4;max-width:auto;max-height:auto;white-space:nowrap;'><a href='#' class="buy-btn">Shop Now</a></div>
-                                <div class='tp-caption Title sft  tp-resizeme ' data-x='0' data-y='420' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Power2.easeInOut' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4;max-width:auto;max-height:auto;white-space:nowrap;'>Farm Fresh Produce Right to Your Door</div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
+    <!-- Slider-->
+    @Html.Partial("_partial/_HomeSlide_1");
     <div id="top">
         <div class="container">
             <div class="row">
