--- a/Shop_03_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -1,120 +1,27 @@
 ﻿@using AnperoFrontend.WebService;
-<div class="container">
-    <div class="row">
-        <div class="col-sm-8" style="padding-right: 0px;">
-            <div class="homeslider">
-                @if (ViewData["slide"] != null)
-                {
-                    Ads[] slide = (Ads[])ViewData["slide"];
-                    if (slide.Length > 0)
+<div id="thm-mart-slideshow" class="thm-mart-slideshow">
+    <div class="container">
+        <div id='thm_slider_wrapper' class='thm_slider_wrapper fullwidthbanner-container'>
+            <div id='thm-rev-slider' class='rev_slider fullwidthabanner'>
+                <ul>
+                    @if (ViewData["slide"] != null)
                     {
-                        <ul id="contenhomeslider-customPage">
-                        @foreach (var item in slide)
+                        Ads[] slide = (Ads[])ViewData["slide"];
+                        if (slide.Length > 0)
                         {
-                         <li><a href="@item.ClickUrl"><img alt="@item.Description" src="@item.ImagesUrl" title="@item.Description" /></a></li>
+                            foreach (var item in slide)
+                            {
+                                <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='@item.ImagesUrl'>
+                                    <img src='@item.ImagesUrl' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="slider-image1" />
+                                    <div class="info">
+                                        @item.Description
+                                    </div>
+                                </li>
+                            }
                         }
-                        </ul>
-                        <div class="bx-control">
-                            <div class="slide-prev">
-                                <span id="bx-prev"></span>
-                            </div>
-                            <div id="bx-pager" class="slide-pager">
-                                @for (int i = 0; i < slide.Length; i++)
-                                {
-                                    <a data-slide-index="@i" href="">@i</a>
-                                }
-                            </div>
-                            <div class="slide-next">
-                                <span id="bx-next"></span>
-                            </div>
-                        </div>
                     }
-                    else
-                    {
-                        <ul id="contenhomeslider-customPage">
-                            <li><a href="#"><img alt="Funky roots" src="assets/data/option6/slide1.jpg" title="Funky roots" /></a></li>
-                            <li><img src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                            <li><img src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                        </ul>
-                        <div class="bx-control">
-                            <div class="slide-prev">
-                                <span id="bx-prev"></span>
-                            </div>
-                            <div id="bx-pager" class="slide-pager">
-                                <a data-slide-index="0" href="">1</a>
-                                <a data-slide-index="1" href="">2</a>
-                                <a data-slide-index="2" href="">3</a>
-                            </div>
-                            <div class="slide-next">
-                                <span id="bx-next"></span>
-                            </div>
-                        </div>
-                    }
-                }
-                else
-                {
-                    <ul id="contenhomeslider-customPage">
-                        <li><a href="#"><img alt="Funky roots" src="assets/data/option6/slide1.jpg" title="Funky roots" /></a></li>
-                        <li><img  src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                        <li><img   src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                    </ul>
-                    <div class="bx-control">
-                        <div class="slide-prev">
-                            <span id="bx-prev"></span>
-                        </div>
-                        <div id="bx-pager" class="slide-pager">
-                            <a data-slide-index="0" href="">1</a>
-                            <a data-slide-index="1" href="">2</a>
-                            <a data-slide-index="2" href="">3</a>
-                        </div>
-                        <div class="slide-next">
-                            <span id="bx-next"></span>
-                        </div>
-                    </div>
-                }
-
-
-               
+                </ul>
             </div>
-        </div>
-        <div class="col-sm-4 group-banner-slider" style="padding-left: 2px; padding-right: 14px;">
-            @if (ViewData["AdsSlide"] != null)
-            {
-                Ads[] slide = (Ads[])ViewData["AdsSlide"];
-                if (slide.Length > 0)
-                {
-                    foreach (var item in slide)
-                    {
-                        <div class="banner-opacity sm-banner">
-                            <a href="@item.ClickUrl"><img src="@item.ImagesUrl" alt="@item.Description"></a>
-                        </div>
-                    }
-                }
-                else
-                {
-                    <div class="banner-opacity sm-banner">
-                        <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                    </div>
-                    <div class="banner-opacity sm-banner">
-                        <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                    </div>
-                    <div class="banner-opacity sm-banner">
-                        <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                    </div>
-                }
-            }
-            else
-            {
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                </div>
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                </div>
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="~/assets/images/384x157.jpg" alt=""></a>
-                </div>
-            }
         </div>
     </div>
 </div>
