--- a/Shop_03_multiProduct/assets/stylesheet/style.css
+++ b/Shop_03_multiProduct/assets/stylesheet/style.css
@@ -9926,6 +9926,7 @@ footer a {
 footer .footer-inner {
 	margin: auto;
 	overflow: hidden;
+    background: url(/assets/images/footer-img.png) no-repeat bottom center;
 }
 footer .footer-inner h3 {
 	color: #3D4C4F;
